--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit_lottie==0.0.2
-streamlit==1.3.0
-requests==2.24.0
-Pillow==8.4.0
-protobuf~=3.19.0
-watchdog==2.1.8
+streamlit_lottie
+streamlit
+requests
+Pillow
